Fix column spacing so that it fits a third. Style the buttons and fix them to the bottom

--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -6,7 +6,7 @@
 
 @media (min-width:320px) {
   .col-3{
-    margin: 1px;
+    padding: 1px;
   }
   #time{
     font-size: 1em;
@@ -21,7 +21,7 @@
 
 @media (min-width:641px) {
   .col-3{
-    margin: 10px;
+    padding: 10px;
   }
   #time{
     font-size: 4em;
@@ -59,8 +59,12 @@ body{
 }
 
 .col-3{
-  width: 30%;
+  width: 33.333333%;
   float: left;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 #time{
@@ -86,4 +90,18 @@ body{
 
 .visitor{
   border-color: blue;
+}
+
+#controls {
+  position: fixed;
+  width: 100%;
+  bottom: 0%;
+}
+
+button {
+  padding: 4px 12px;
+  border: 1px solid #000;
+  background-color: #111;
+  color: #ccc;
+  font-size: 1em;
 }
